# treehouse

./: .gitignore  Makefile  README.md  netlify.toml
.claude/: settings.local.json
ast-engine/: Cargo.toml
ast-engine/.cargo/: config.toml
ast-engine/src/: lib.rs
ui/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
ui/scripts/: copy-wasm.js  download-parsers.js
ui/src/: App.tsx  index.css
ui/src/components/: BottomSheet.tsx  LanguageSelector.tsx  TreeView.tsx
ui/src/lib/: codemirror-extensions.ts  parser.ts
ui/src/types/: wasm.d.ts
